5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1832_1639.log
== TEST (2019-06-13 19:10:06) 
-- CODE:
from numpy import*
vet=array(eval(input("digite a quantidade de alunos matriculados: ")))
a=0
for i in range(size(vet)):
	if(vet[i]%2!=0):
		a=a+1
v=zeros(a,dtype=int)
b=0
for i in range(size(vet)):
	if(vet[i]%2!=0):
		v[b]=v[b]+vet[i]
		b=b+1
print(v)
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:40:38) 
-- CODE:
from numpy import*
vet=array(eval(input("digite a quantidade de alunos matriculados: ")))
a=0
cont=zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]==1):
		cont[0]=cont[0]+1
	if(vet[i]==2):
		cont[1]=cont[1]+1
	if(vet[i]==3):
		cont[2]=cont[2]+1
	if(vet[i]==4):
		cont[3]=cont[3]+1
	if(vet[i]==5):
		cont[4]=cont[4]+1
	if(vet[i]=6):
		cont[5]=cont[5]+1
print(max(cont))
print(cont)
		
	
	
		
	

-- ERROR:
File "XXXX", line 16
    if(vet[i]=6):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:40:54) 
-- CODE:
from numpy import*
vet=array(eval(input("digite a quantidade de alunos matriculados: ")))
a=0
cont=zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]==1):
		cont[0]=cont[0]+1
	if(vet[i]==2):
		cont[1]=cont[1]+1
	if(vet[i]==3):
		cont[2]=cont[2]+1
	if(vet[i]==4):
		cont[3]=cont[3]+1
	if(vet[i]==5):
		cont[4]=cont[4]+1
	if(vet[i]==6):
		cont[5]=cont[5]+1
print(max(cont))
print(cont)
		
	
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:41:19) 
-- CODE:
from numpy import*
vet=array(eval(input("digite a quantidade de alunos matriculados: ")))
cont=zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]==1):
		cont[0]=cont[0]+1
	if(vet[i]==2):
		cont[1]=cont[1]+1
	if(vet[i]==3):
		cont[2]=cont[2]+1
	if(vet[i]==4):
		cont[3]=cont[3]+1
	if(vet[i]==5):
		cont[4]=cont[4]+1
	if(vet[i]==6):
		cont[5]=cont[5]+1
print(max(cont))
print(cont)
		
	
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:42:30) 
-- CODE:
from numpy import*
vet=array(eval(input("digite a quantidade de alunos matriculados: ")))
cont=zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]==1):
		cont[0]=cont[0]+1
	if(vet[i]==2):
		cont[1]=cont[1]+1
	if(vet[i]==3):
		cont[2]=cont[2]+1
	if(vet[i]==4):
		cont[3]=cont[3]+1
	if(vet[i]==5):
		cont[4]=cont[4]+1
	if(vet[i]==6):
		cont[5]=cont[5]+1
print(max(cont))
print(cont)
		
	
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:42:51) 
-- CODE:
from numpy import*
vet=array(eval(input("digite a quantidade de alunos matriculados: ")))
cont=zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]==1):
		cont[0]=cont[0]+1
	if(vet[i]==2):
		cont[1]=cont[1]+1
	if(vet[i]==3):
		cont[2]=cont[2]+1
	if(vet[i]==4):
		cont[3]=cont[3]+1
	if(vet[i]==5):
		cont[4]=cont[4]+1
	if(vet[i]==6):
		cont[5]=cont[5]+1
print(min(cont))
print(cont)
		
	
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:43:42) 
-- CODE:
from numpy import*
vet=array(eval(input("digite a quantidade de alunos matriculados: ")))
cont=zeros(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]==0):
		cont[0]=cont[0]+1
	if(vet[i]==1):
		cont[1]=cont[1]+1
	if(vet[i]==2):
		cont[2]=cont[2]+1
	if(vet[i]==3):
		cont[3]=cont[3]+1
	if(vet[i]==4):
		cont[4]=cont[4]+1
	if(vet[i]==5):
		cont[5]=cont[5]+1
print(min(cont))
print(cont)
		
	
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:43:55) 
-- CODE:
from numpy import*
vet=array(eval(input("digite a quantidade de alunos matriculados: ")))
cont=(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]==0):
		cont[0]=cont[0]+1
	if(vet[i]==1):
		cont[1]=cont[1]+1
	if(vet[i]==2):
		cont[2]=cont[2]+1
	if(vet[i]==3):
		cont[3]=cont[3]+1
	if(vet[i]==4):
		cont[4]=cont[4]+1
	if(vet[i]==5):
		cont[5]=cont[5]+1
print(min(cont))
print(cont)
		
	
	
		
	

-- ERROR:
File "XXXX", line 3
    cont=(6,dtype=int)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:44:20) 
-- CODE:
from numpy import*
vet=array(eval(input("digite a quantidade de alunos matriculados: ")))
cont=one(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]==1):
		cont[0]=cont[0]+1
	if(vet[i]==2):
		cont[1]=cont[1]+1
	if(vet[i]==3):
		cont[2]=cont[2]+1
	if(vet[i]==4):
		cont[3]=cont[3]+1
	if(vet[i]==5):
		cont[4]=cont[4]+1
	if(vet[i]==6):
		cont[5]=cont[5]+1
print(min(cont))
print(cont)
		
	
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:44:27) 
-- CODE:
from numpy import*
vet=array(eval(input("digite a quantidade de alunos matriculados: ")))
cont=one(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]==1):
		cont[0]=cont[0]+1
	if(vet[i]==2):
		cont[1]=cont[1]+1
	if(vet[i]==3):
		cont[2]=cont[2]+1
	if(vet[i]==4):
		cont[3]=cont[3]+1
	if(vet[i]==5):
		cont[4]=cont[4]+1
	if(vet[i]==6):
		cont[5]=cont[5]+1
print(max(cont))
print(cont)
		
	
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:44:42) 
-- CODE:
from numpy import*
vet=array(eval(input("digite a quantidade de alunos matriculados: ")))
cont=ones(6,dtype=int)
for i in range(size(vet)):
	if(vet[i]==1):
		cont[0]=cont[0]+1
	if(vet[i]==2):
		cont[1]=cont[1]+1
	if(vet[i]==3):
		cont[2]=cont[2]+1
	if(vet[i]==4):
		cont[3]=cont[3]+1
	if(vet[i]==5):
		cont[4]=cont[4]+1
	if(vet[i]==6):
		cont[5]=cont[5]+1
print(max(cont))
print(cont)
		
	
	
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
